[package]
name = "filegirl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
notify = { version = "6.1.1", features = ["serde"] }
fs_extra = "1.3.0"
serde_yaml = "0.9.34"
regex = "1.10.4"
md5 = "0.7.0"
walkdir = "2.5.0"
